sql/sql_trigger.cc
@@ -981,12 +981,10 @@ bool Table_triggers_list::check_n_load(THD *thd, const char *db,
         thd->variables.sql_mode= (ulong)*trg_sql_mode;
 
         Lex_input_stream lip(thd, trg_create_str->str, trg_create_str->length);
-        thd->m_lip= &lip;
         lex_start(thd);
         thd->spcont= 0;
-        int err= MYSQLparse((void *)thd);
 
-        if (err || thd->is_fatal_error)
+        if (parse_sql(thd, &lip))
         {
           /* Currently sphead is always deleted in case of a parse error */
           DBUG_ASSERT(lex.sphead == 0);
